--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ OWNCLOUD_DATA_PATH=/home/user/data
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 HTTP_PORT=8080
+OWNCLOUD_CERTIFICATE_DOMAIN=Host(`myowncloud.example.com`)
+# Cloudflare config
+CLOUDFLARE_EMAIL=email@example.com
+CLOUDFLARE_KEY=myapikey
+CLOUDFLARE_DOMAIN=example.com
+CLOUDFLARE_SUBDOMAIN='myowncloud'
+# Traefik config
+TRAEFIK_EMAIL=email@example.com
