Added duplicity backups to gdrive

--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ CLOUDFLARE_DOMAIN=example.com
 CLOUDFLARE_SUBDOMAIN='myowncloud'
 # Traefik config
 TRAEFIK_EMAIL=email@example.com
+# Duplicity config
+LOCAL_BACKUP_PATH=/mnt/backup
+GDRIVE_CLIENT_ID=client-id
+GDRIVE_CLIENT_SECRET=client-secret
+DUPLICITY_PASSWORD=pass
+DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
