--- a/duplicity/Dockerfile
+++ b/duplicity/Dockerfile
@@ -14,7 +14,7 @@ RUN sed -i "s|<duplicity-password>|${duplicity_password}|g" /duplicity/run_dup_o
 RUN sed -i "s|<duplicity-offsite-dest>|${duplicity_offsite_dest}|g" /duplicity/run_dup_once.sh
 
 RUN chmod +x /duplicity/run.sh
-RUN chmod +x /duplicity/run_dup_once
+RUN chmod +x /duplicity/run_dup_once.sh
 
 RUN touch /var/log/cron.log
 RUN (crontab -l 2>/dev/null; echo "0 0 * * * /duplicity/run_dup_once.sh  > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
