Fixed backup cron job for owncloud

--- a/owncloud/Dockerfile
+++ b/owncloud/Dockerfile
@@ -1,8 +1,14 @@
 ARG owncloud_version=latest
 FROM owncloud/server:${owncloud_version}
 
+RUN touch /var/log/rsync.log
+RUN chown www-data:www-data /var/log/rsync.log
+RUN chmod +w /var/log/rsync.log
+
 COPY ./backup_script.sh /backup_script.sh
 RUN chown www-data:www-data /backup_script.sh
 RUN chmod +x /backup_script.sh
 
-RUN (crontab -u www-data -l 2>/dev/null; echo "0 0 * * * /backup_script.sh > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -u www-data -
+COPY ./backup_cron /etc/cron.d/backup_cron
+RUN chmod 644 /etc/cron.d/backup_cron
+
