--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ TRAEFIK_EMAIL=email@example.com
 LOCAL_BACKUP_PATH=/mnt/backup
 DUPLICITY_PASSWORD=pass
 DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
+# PiHole config
+PIHOLE_PASSWORD=admin
+PIHOLE_UPSTREAM_DNS=8.8.8.8;8.8.4.4
