--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,3 +165,20 @@ services:
       - "traefik.enable=false"
     volumes:
       - backup:/mnt/backup
+
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "8081:80/tcp"
+    environment:
+      TZ: 'Europe/Zurich'
+      WEBPASSWORD: ${PIHOLE_PASSWORD}
+      PIHOLE_DNS_: ${PIHOLE_UPSTREAM_DNS}
+      # Volumes store your data between container upgrades
+    volumes:
+      - './pihole/etc-pihole:/etc/pihole'
+      - './pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
+    restart: unless-stopped
