Disable reverse proxy for pihole container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,3 +182,5 @@ services:
       - './pihole/etc-pihole:/etc/pihole'
       - './pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
     restart: unless-stopped
+    labels:
+      - "traefik.enable=false"
