Fixed PiHole ports

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
 # PiHole config
 PIHOLE_PASSWORD=admin
 PIHOLE_UPSTREAM_DNS=8.8.8.8;8.8.4.4
+LOCAL_IPV4=192.168.1.1
+LOCAL_IPV6=[::1]
