--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       - mariadb
       - redis
       - reverse-proxy
-      - cloudflare
+      - cron
     environment:
       - OWNCLOUD_DOMAIN=${OWNCLOUD_DOMAIN}
       - OWNCLOUD_DB_TYPE=mysql
@@ -170,8 +170,10 @@ services:
     container_name: pihole
     image: pihole/pihole:latest
     ports:
-      - "53:53/tcp"
-      - "53:53/udp"
+      - "${LOCAL_IPV4}:53:53/tcp"
+      - "${LOCAL_IPV4}:53:53/udp"
+      - "${LOCAL_IPV6}:53:53/tcp"
+      - "${LOCAL_IPV6}:53:53/udp"
       - "8081:80/tcp"
     environment:
       TZ: 'Europe/Zurich'
