--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
 PIHOLE_PASSWORD=admin
 PIHOLE_UPSTREAM_DNS=8.8.8.8;8.8.4.4
 LOCAL_IPV4=192.168.1.1
-LOCAL_IPV6=[::1]
+LOCAL_IPV6=::1  # This should use the expanded form of ipv6
