--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,7 @@ DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
 # PiHole config
 PIHOLE_PASSWORD=admin
 PIHOLE_UPSTREAM_DNS=8.8.8.8;8.8.4.4
-LOCAL_IPV4=192.168.1.1
-LOCAL_IPV6=::1  # This should use the expanded form of ipv6
+LOCAL_IPV4_GATEWAY=192.168.1.1
+LOCAL_IPV4_SUBNET=192.168.1.0/24
+LOCAL_IPV4=192.168.1.40
+LOCAL_IPV6=fd00::  # This should use the expanded form of ipv6
