Switched to GCS

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,9 @@ TRAEFIK_EMAIL=email@example.com
 # Duplicity config
 LOCAL_BACKUP_PATH=/mnt/backup
 DUPLICITY_PASSWORD=pass
-DUPLICITY_OFFSITE_DEST=gdocs://test@gmail.com/folder
+DUPLICITY_OFFSITE_DEST=s3://bucket-name
+GS_ACCESS_KEY=example-key
+GS_SECRET_KEY=example-secret-key
 # PiHole config
 PIHOLE_PASSWORD=admin
 PIHOLE_UPSTREAM_DNS=8.8.8.8;8.8.4.4
