Jellyfin with HW acceleration

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,10 @@ LOCAL_IPV4_GATEWAY=192.168.1.1
 LOCAL_IPV4_SUBNET=192.168.1.0/24
 LOCAL_IPV4=192.168.1.40
 LOCAL_IPV6=fd00::  # This should use the expanded form of ipv6
+# Webdav settings for Jellyfin
+WEBDAV_URL=<webdav url / get this from owncloud's interface>
+WEBDAV_USER=<owncloud username>
+WEBDAV_PASS=<owncloud password for user>
+JELLYFIN_CONFIG_DIR=<where to store config files>
+HOST_VIDEO_GID=<GID of the group video on the host Raspberry Pi>
+
