Switched cron to use the new rust binaries

--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -14,6 +14,7 @@ RUN apk update && apk upgrade && apk add py3-pip duplicity jq curl openssh
 RUN pip3 install boto3 requests python-dotenv
 
 COPY general/dotenv_writer/target/aarch64-unknown-linux-musl/release/dotenv_writer /bin/dotenv_writer
+RUN chmod +x /bin/dotenv_writer
 
 RUN dotenv_writer -D CLOUDFLARE_EMAIL=${cloudflare_email} \
     -D CLOUDFLARE_KEY=${cloudflare_key} \
@@ -28,14 +29,14 @@ RUN dotenv_writer -D CLOUDFLARE_EMAIL=${cloudflare_email} \
 ADD cron/duplicity /duplicity
 RUN chmod +x /duplicity/run_dup_once.sh
 
-ADD cron/cloudflare-dns /cloudflare-dns
-RUN chmod +x /cloudflare-dns/cloudflare-dyndns.py
+COPY cron/cloudflare-dns/target/aarch64-unknown-linux-musl/release/cf_dyndns /bin/cf_dyndns
+RUN chmod +x /bin/cf_dyndns
 
 ADD cron/run_hourly/ /etc/periodic/hourly/
 RUN chmod +x /etc/periodic/hourly/*
 
 RUN touch /var/log/cron.log
 RUN (crontab -l 2>/dev/null; echo "0 0 * * 0 /duplicity/run_dup_once.sh > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
-RUN (crontab -l 2>/dev/null; echo "*/30 * * * * /cloudflare-dns/cloudflare-dyndns.py --dotenv-dir / > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
+RUN (crontab -l 2>/dev/null; echo "*/30 * * * * cf_dyndns --dotenv-dir / > /proc/1/fd/1 2>/proc/1/fd/2") | crontab -
 
 CMD ["crond", "-f"]
