Migrating deploy script to python

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,25 @@ volumes:
     driver: local
     driver_opts:
       type: volume
-      device: ${OWNCLOUD_DATA_PATH}/files
+      device: ${DATA_PATH}/files
       o: bind
   mysql:
     driver: local
     driver_opts:
       type: volume
-      device: ${OWNCLOUD_DATA_PATH}/mysql
+      device: ${DATA_PATH}/mysql
       o: bind
   redis:
     driver: local
     driver_opts:
       type: volume
-      device: ${OWNCLOUD_DATA_PATH}/redis
+      device: ${DATA_PATH}/redis
+      o: bind
+  jellyfin_config:
+    driver: local
+    driver_opts:
+      type: volume
+      device: ${DATA_PATH}/jellyfin_config
       o: bind
   backup:
     driver: local
@@ -96,13 +102,13 @@ services:
     # Forward 8080 port to allow for local access as well. Comment out
     # if you only want access via the reverse proxy
     ports:
-      - ${HTTP_PORT}:8080
+      - 8080:8080
     depends_on:
       - mariadb
       - redis
       - reverse-proxy
     environment:
-      - OWNCLOUD_DOMAIN=${OWNCLOUD_DOMAIN}
+      - OWNCLOUD_DOMAIN=localhost:8080
       - OWNCLOUD_DB_TYPE=mysql
       - OWNCLOUD_DB_NAME=owncloud
       - OWNCLOUD_DB_USERNAME=owncloud
@@ -114,7 +120,7 @@ services:
       - OWNCLOUD_REDIS_ENABLED=true
       - OWNCLOUD_REDIS_HOST=redis
     labels:
-      - "traefik.http.routers.owncloud.rule=${OWNCLOUD_CERTIFICATE_DOMAIN}"
+      - "traefik.http.routers.owncloud.rule=${OWNCLOUD_TRAEFIK_RULE}"
       - "traefik.docker.network=web"
       - "traefik.http.routers.owncloud.entrypoints=websecure"
       - "traefik.http.routers.owncloud.tls=true"
@@ -187,12 +193,12 @@ services:
       args:
         duplicity_password: ${DUPLICITY_PASSWORD}
         duplicity_offsite_dest: ${DUPLICITY_OFFSITE_DEST}
-        gs_access_key_id: ${GS_ACCESS_KEY}
-        gs_secret_key: ${GS_SECRET_KEY}
+        aws_access_key_id: ${AWS_ACCESS_KEY}
+        aws_secret_key: ${AWS_SECRET_KEY}
         cloudflare_email: ${CLOUDFLARE_EMAIL}
         cloudflare_key: ${CLOUDFLARE_KEY}
         cloudflare_domain: ${CLOUDFLARE_DOMAIN}
-        cloudflare_subdomains: ${CLOUDFLARE_SUBDOMAIN}
+        cloudflare_subdomains: ${CLOUDFLARE_SUBDOMAINS}
     container_name: cron_container
     networks:
       - ipv4_net
@@ -253,7 +259,7 @@ services:
     environment:
       - TZ=Europe/Zurich
     volumes:
-      - ${JELLYFIN_CONFIG_DIR}:/config
+      - jellyfin_config:/config
       - owncloud_webdav:/media
     devices:
       # Specific to RPi4B
