--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -5,16 +5,19 @@
 #  level = "DEBUG"
 
 [providers.docker]
+  [entryPoints.webnoredirect]
+  address = ":80"
+
   [entryPoints.web]
   address = ":80"
     [entryPoints.web.http.redirections.entryPoint]
     to = "websecure"
     scheme = "https"
 
-    [entryPoints.websecure]
-    address = ":443"
-    [entryPoints.websecure.http.tls]
-    certResolver = "le"
+  [entryPoints.websecure]
+  address = ":443"
+  [entryPoints.websecure.http.tls]
+  certResolver = "le"
 
   [certificatesResolvers.le.acme]
   email = "<traefik-email>"
