Disable HTTPS redirect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,8 +125,7 @@ services:
       - "traefik.http.routers.owncloud.tls=true"
       - "traefik.http.routers.owncloud.tls.certresolver=le"
       - "traefik.http.routers.owncloudlocal.rule=Host(`owncloud.local`)"
-      - "traefik.http.routers.owncloudlocal.local.entrypoints=webnoredirect"
-      - "traefik.http.routers.owncloudlocal.tls=false"
+      - "traefik.http.routers.owncloudlocal.local.entrypoints=web"
       - "traefik.enable=true"
     healthcheck:
       test: [ "CMD", "/usr/bin/healthcheck" ]
